Fix: Message shield alignment is not right. (#11703)
* Message shield alignment fixed

* Alignment fixed in all layouts

* Fixed for all font sizes

--- a/res/css/views/rooms/_EventBubbleTile.pcss
+++ b/res/css/views/rooms/_EventBubbleTile.pcss
@@ -332,6 +332,9 @@ limitations under the License.
 
         .mx_EventTile_e2eIcon {
             flex-shrink: 0; /* keep it at full size */
+
+            // Keep height equal to text for shield alignment, additional 2px because of 1px padding on text
+            height: calc($font-18px + 2px);
         }
     }
 
